# listener-service

./: .gitignore  README.md  config.json
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: android-e2e.yml  android-rust.yml  android-tests.yml  android.yml
android/: gradle.properties  settings.gradle
android/app/: build.gradle
android/app/src/androidTest/kotlin/com/listener/: ApiClientE2ETest.kt  WsServiceE2ETest.kt
android/app/src/main/: AndroidManifest.xml
android/app/src/main/kotlin/com/listener/: ApiClient.kt  ConfigEndpoints.kt  MainActivity.kt  WsService.kt
android/app/src/test/kotlin/com/listener/: ApiClientTest.kt
app/src/main/java/com/listener/: WsService.kt
rust_core/: Cargo.toml  lib.rs
rust_core/src/: lib.rs
tests/: e2e_android_gradle_jvm_compat.sh  e2e_android_gradle_non_parallel_guard.sh  e2e_android_gradle_wrapper_guard.sh  e2e_raw_github_config.sh  e2e_raw_github_config_fallback.sh  e2e_workflow_live_checks_guard.sh  e2e_workflow_no_push_guard.sh  e2e_ws_service_background_return_guard.sh
